--- a/templates/deploy.html
+++ b/templates/deploy.html
@@ -73,4 +73,19 @@
                 <h6>Getting API Keys:</h6>
                 <ul>
                     <li><strong>Render:</strong> Get your API key from <a href="https://dashboard.render.com/account/api-keys" target="_blank">Render Dashboard</a></li>
-                    <li><strong>Heroku:</strong> Generate API token from <a href="https://dashboard.heroku.com/account" target="_blank">Account Settings</a>
+                    <li><strong>Heroku:</strong> Generate API token from <a href="https://dashboard.heroku.com/account" target="_blank">Account Settings</a></li>
+                    <li><strong>Katabump:</strong> Contact Katabump support or check your dashboard for API credentials</li>
+                </ul>
+                
+                <h6 class="mt-3">Repository Requirements:</h6>
+                <ul>
+                    <li>Your repository must contain a <code>requirements.txt</code> or <code>package.json</code></li>
+                    <li>Include a <code>Procfile</code> for Heroku deployments</li>
+                    <li>Make sure your bot code is production-ready</li>
+                    <li>Store sensitive data in environment variables</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
